--- a/Battleship8.html
+++ b/Battleship8.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Battleship!</title>
-		<sytle>
+		<style>
 			body {
 				background-color: black;
 			}
@@ -43,7 +43,7 @@
 				boarder-color: rgb(83, 175, 19);
 				font-siz: lem;
 			}
-		</sytle>
+		</style>
 	</head>
 	<body>
 		<div id="board">
